# biosim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  BUSINESS_CASE.md  CHANGELOG.md  INCONSISTENCIES.md  LICENSE.txt  README.md  generate_analysis_pdf.py  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: PUBLIC_INTERNAL_BOUNDARY.md  README.md  biomodule.md  bioworld.md  book.md  brain_pipeline.md  cellml.md  config.md  extensions.md  hub-composition.md  kernel-1-5.md  migration-1-5.md  neuro.md  overview.md  packaging.md  plugin-development.md  quickstart.md  releasing.md  solver.md  wiring.md
docs/plans/: plugin-architecture.md
examples/: README.md  basic_usage.py  cellml_runtime_example.py  default_bio_solver.py  developer_api.py  ecology_simui_demo.py  fixed_step_bio_solver.py  multi_module_ui_demo.py  neuro_simui_demo.py  ui_demo.py  visuals_demo.py  wiring_builder_demo.py  world_simulation.py
examples/adapters/: test_tellurium_adapter.py
examples/configs/: brain.toml  brain.yaml  ecology_predator_prey.yaml  ecology_with_temperature_ui.yaml
examples/data/: small_decay.cellml
examples/pack-template/: README.md  pyproject.toml
product-docs/: PRD.md  README.md
scripts/: build_labs_serve_ui.sh  build_legacy_biosim_dist.py  build_simui_frontend.sh  precommit_biosim_tests.sh  release_pypi.sh  snapshot_biomodule_outputs.py
src/biosim/: __about__.py  __init__.py  __main__.py  extensions.py  hub.py  managed_runtime.py  modules.py  onnx.py  pack.py  package_repo.py  registry.py  signals.py  visuals.py  wiring.py  workspace.py  world.py
src/biosimulant/: __init__.py  __main__.py
src/bsim/: __init__.py  __main__.py  solver.py  wiring.py  world.py
tasks/: README.md
tasks/epics/: 09-standards-interop.md  10-web-platform.md
tests/: conftest.py  test_api.py  test_biomodules.py  test_biosignals.py  test_biosim_init.py  test_biosimulant_namespace.py  test_bioworld_flow.py  test_cellml_contrib.py  test_cli.py  test_cli_additional_coverage.py  test_cli_completion.py  test_cloud_client.py  test_default_bio_solver.py  test_errors.py  test_fixed_step_bio_solver.py  test_labs_serve.py  test_listeners.py  test_managed_runtime.py  test_modules_coverage.py  test_onnx.py  test_optional_deps.py  test_pack.py  test_package_repo.py  test_phase2_cli.py  test_phase3_extensions.py  test_phase4_docs.py  test_phase6_workspace.py  test_phase8_hardening.py  test_phase9_registry_cli.py  test_ports_validation.py  test_registry.py  test_runtime_coercion.py  test_runtime_config.py  test_runtime_entrypoint.py  test_runtime_flatten.py  test_sbml_contrib.py  test_signals_additional.py  test_signals_coverage.py  test_simui_build.py  test_simui_editor_api.py  (+14 more)
tests/snapshots/: README.md  biomodule_refactor_fast.json  (+1 more)
(+110 files in other folders)
