[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosimulant"
dynamic = ["version"]
description = "Open-source local simulation runtime and CLI for Biosimulant"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Demi", email = "bjaiye1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "argcomplete>=3.5",
  "fastapi>=0.110,<1",
  "numpy>=1.26",
  "pyyaml>=6",
  "uvicorn>=0.23",
]

[project.urls]
Documentation = "https://github.com/Biosimulant/biosim#readme"
Issues = "https://github.com/Biosimulant/biosim/issues"
Source = "https://github.com/Biosimulant/biosim"

[project.scripts]
biosimulant = "biosimulant.__main__:main"

[tool.hatch.version]
path = "src/biosim/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/biosim tests}"

[tool.coverage.run]
source_pkgs = ["biosim", "biosimulant"]
branch = true
parallel = true
omit = [
  "src/biosim/__about__.py",
  "*/tests/*",
]

[tool.coverage.paths]
biosim = ["src/biosim", "*/biosim/src/biosim"]
biosimulant = ["src/biosimulant", "*/biosim/src/biosimulant"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "@abstractmethod",
]
precision = 2
show_missing = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
python_files = [
  "test_*.py",
]
addopts = "-q"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "httpx>=0.26",
  "tomli>=2; python_version < '3.11'",
]
ml = [
  "onnxruntime>=1.18",
]
cellml = [
  "libcellml>=0.6.3,<0.7",
  "scipy>=1.11,<2",
]
# Everything
all = [
  "biosimulant[dev,ml,cellml]",
]

[tool.hatch.build]
include = [
  "src/biosim/labs_serve/static/**",
  "src/biosimulant/**",
]
exclude = [
  "packages/labs-serve-ui/node_modules/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biosim", "src/biosimulant"]

[tool.hatch.build.targets.sdist]
include = [
  "src/biosim/**",
  "src/biosimulant/**",
  "tests/**",
  "docs/**",
  "examples/**",
  "scripts/**",
  "packages/labs-serve-ui/**",
  "CHANGELOG.md",
  "README.md",
  "LICENSE.txt",
  "pyproject.toml",
]
